== 0.19.0

== 0.18.0

* Enhancements
  * Templates can now specify that generated stickies avoid weekends
  * Calendar Updates
    * Stickies can now be dragged to a new date
    * Improved performance using a combination of caching and AJAX
  * Email Updates
    * Daily Stickies Due now also includes stickies due the following day (or the following Monday)
    * Daily Stickies Due now includes an ICS file to allow syncing with an external calendar
  * Sticky Updates
    * Stickies can be exported to an ICS calendar format from the stickies list
    * Updated GUI for sticky show page and comments
    * Stickies in lists can now be deleted inline
  * Using Rails 3.2.2 and Contour 0.10.2

* Bug Fix
  * Viewers can now remove themselves from projects to which they've been added
  * Users assigned to stickies that have been removed from a project are no longer removed as sticky owner if the sticky is updated
    * NOTE: Unless of course, the sticky is assigned to someone else

== 0.17.2

* Enhancements
  * Using Contour-Minimalist for styling

== 0.17.1

* Enhancements
  * ICS files are also included in emails for stickies with a due date but no due time

* Bug Fix
  * Due Date Changed email no longer triggers when a sticky with a due time is created

== 0.17.0

* Enhancements
  * Sticky filters now combine duplicate tags
  * Minor graphical tag changes on calendar
  * Stickies and templates can now have a due time and duration
  * Sticky emails are now sent if the sticky due time is changed
  * Sticky and group creation emails now include an ICS event file if a due date time is set
  * Calendar now sorts stickies by project, then by tags, then by due date time
  * Sticky tags have minor GUI update in emails

* Bug Fix
  * Email setting checkboxes for project notifications are no longer incorrectly disabled

== 0.16.2

* Bug Fix
  * Removed "assigned to me" option for sticky list page as it was redundant