@@ -1,6 +1,6 @@
 <span>
   <% if current_user.all_projects.include?(@project) %>
-    <%= form_tag project_users_path(project_user: {project_id: @project.id, allow_editing: @relation == 'editors'}), method: :post, remote: true, style: 'display:inline' do %>
+    <%= form_tag project_users_path(project_user: { project_id: @project.id, allow_editing: @relation == 'editors' }), method: :post, remote: true, style: 'display:inline' do %>
       <b><%= @relation.humanize %>:<br /></b>
       <%= text_field_tag "#{@relation}_text", '', style: "width:300px;" %><%= information("Press Enter to Add #{@relation.humanize}") %>
     <% end %>
