@@ -26,5 +26,10 @@
       <b>System Admin:</b>
       <%= @user.system_admin? %>
     </p>
+
+    <p>
+      <b>Service Account</b>
+      <%= @user.service_account? %>
+    </p>
   <% end %>
 </fieldset>
