@@ -31,6 +31,7 @@ class ActionController::IntegrationTest
     user.update_attribute :status, user_template.status
     user.update_attribute :deleted, user_template.deleted?
     user.update_attribute :system_admin, user_template.system_admin?
+    user.update_attribute :service_account, user_template.service_account?
     post_via_redirect 'users/login', user: {email: email, password: password}
     user
   end
