@@ -1,5 +1,8 @@
 == 0.19.0
 
+* Enhancements
+  * Service Accounts added to provide interface for other web applications
+
 == 0.18.0
 
 * Enhancements
